5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1590_2895.log
== TEST (2019-03-25 14:18:42) 
-- CODE:
quantidade = (10)
VALOR = (10.00)
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:25:42) 
-- CODE:
quantidade = (10)
valor = (10.00)
valor frete = (125.00) 

-- ERROR:
File "XXXX", line 3
    valor frete = (125.00) 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:26:08) 
-- CODE:
quantidade = (10)
valor = (10.00)


-- ERROR:
File "XXXX", line 3
    valor frete = (125.00) 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:28:08) 
-- CODE:
quantidade = (5)
valor = (100.0)
frete = (40.0)
print(input(quantidade * valor + frete))


-- OUTPUT:
540.012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:28:16) 
-- CODE:
quantidade = (5)
valor = (100.0)
frete = (40.0)
print(input(quantidade * valor + frete))


-- EXECUTION TIME:
0.216489
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.012
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.010
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:28:30) 
-- CODE:
quantidade = (5)
valor = (100.0)
frete = (40.0)
print(input(var(quantidade * valor + frete))


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:28:38) 
-- CODE:
quantidade = (5)
valor = (100.0)
frete = (40.0)
print(input(var(quantidade * valor + frete))

-- ERROR:
File "XXXX", line 5
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:28:41) 
-- CODE:
quantidade = (5)
valor = (100.0)
frete = (40.0)
print(input(var(quantidade * valor + frete))
-- ERROR:
File "XXXX", line 5
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:29:26) 
-- CODE:
quantidade = (5)
valor = (100.0)
frete = (40.0)
print(input(float(quantidade * valor + frete)))
-- OUTPUT:
540.012
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:29:28) 
-- CODE:
quantidade = (5)
valor = (100.0)
frete = (40.0)
print(input(float(quantidade * valor + frete)))
-- EXECUTION TIME:
0.161609
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.012
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.010
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0246
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:09) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor") *float("quantidade")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:11) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")
-- EXECUTION TIME:
0.143263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:32) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:33:34) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")
-- EXECUTION TIME:
0.123727
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:34:22) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:24) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- EXECUTION TIME:
0.14119
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:26) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- EXECUTION TIME:
0.181224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:34:26) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:26) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- EXECUTION TIME:
0.269329
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:26) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- EXECUTION TIME:
0.184047
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:34:26) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:29) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- EXECUTION TIME:
0.268933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:29) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- EXECUTION TIME:
0.129148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:34:30) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

print("total")
-- EXECUTION TIME:
0.251532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:35:43) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+("frete")

valor = 7
quantidade = 5
frete = 2
total = 
-- ERROR:
File "XXXX", line 10
    total = 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:24) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+float("frete")
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:25) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")

total = float("valor") *float("quantidade")+float("frete")
print(total)
-- EXECUTION TIME:
0.114667
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 5, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:32) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")
total = float("valor") *float("quantidade")+float("frete")
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:37:33) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")
total = float("valor") *float("quantidade")+float("frete")
print(total)
-- EXECUTION TIME:
0.144404
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:13) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")
total = float("valor") *float("quantidade")+float("frete")
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:22) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")
total = float("valor") *float("quantidade")+float("frete")
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:41) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")
total = float("valor") *float("quantidade")+float("frete")
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:41) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")
total = float("valor") *float("quantidade")+float("frete")
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:02) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")
total = float("valor") *float("quantidade")+float("frete")
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float("valor") *float("quantidade")+float("frete")
ValueError: could not convert string to float: 'valor'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:47) 
-- CODE:
valor = input("jogos")
quantidade = input("instruções:")
frete = input("frete")
total = float(valor) *float(quantidade)+float(frete)
print (total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:09) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete")
total = float(valor) *float(quantidade)+float(frete1)
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(valor) *float(quantidade)+float(frete1)
NameError: name 'frete1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:29) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete")
total = float(valor) *float(quantidade)+float(frete1)
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(valor) *float(quantidade)+float(frete1)
NameError: name 'frete1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:49) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete")
total = float(valor) *float(quantidade)+float(frete1)
print (total)
-- EXECUTION TIME:
0.182308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total = float(valor) *float(quantidade)+float(frete1)
NameError: name 'frete1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:56) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete")
total = float(valor) * float(quantidade)+float(frete1)
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(valor) * float(quantidade)+float(frete1)
NameError: name 'frete1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:57) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete")
total = float(valor) * float(quantidade)+float(frete1)
print (total)
-- EXECUTION TIME:
0.136055
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total = float(valor) * float(quantidade)+float(frete1)
NameError: name 'frete1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:40:58) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete")
total = float(valor) * float(quantidade)+float(frete1)
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(valor) * float(quantidade)+float(frete1)
NameError: name 'frete1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:41:33) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete:")
total = float(valor)*float(quantidade)+float(frete1)
print (total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(valor)*float(quantidade)+float(frete1)
NameError: name 'frete1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:41:55) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete:")

total = float(valor)*float(quantidade)+float(frete)
print (total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:42:06) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete:")

total = float(valor)*float(quantidade)+float(frete)
print (total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:42:08) 
-- CODE:
valor = input("jogos")
quantidade = input("quantidade:")
frete = input("frete:")

total = float(valor)*float(quantidade)+float(frete)
print (total)
-- EXECUTION TIME:
0.200003
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
